--- a/文档/使用指南.md
+++ b/文档/使用指南.md
@@ -1,10 +1,10 @@
-# 配置驱动页面生成系统 - 使用指南
+# UIWeb Vue 2.0 配置驱动页面生成系统 - 使用指南
 
 ## 🚀 快速开始
 
 ### 1. 系统概述
 
-配置驱动的页面生成系统已经成功部署到项目中，现在你可以通过简单的配置文件来管理所有页面，而不需要手动修改路由和菜单文件。
+配置驱动的页面生成系统已经成功部署到项目中，现在你可以通过简单的配置文件来管理所有页面，而不需要手动修改路由和菜单文件。系统支持单组件模式、数组模式和组合模式，可以灵活地展示一个或多个手机/平板组件。
 
 ### 2. 核心文件
 
@@ -12,12 +12,24 @@
 - **动态页面组件**: `src/components/DynamicPage.vue` - 根据配置渲染页面
 - **资源渲染器**: `src/components/ResourceRenderer.vue` - 动态渲染不同类型的资源控件
 - **页面生成工具**: `src/utils/pageGenerator.js` - 辅助工具函数
+- **设备容器**: `src/components/common/DeviceContainer.vue` - 设备展示容器
+- **事件总线**: `src/utils/emitter.ts` - 组件间通信
+
+### 3. 系统特性
+
+- ✅ **单组件模式**: 传统的一个手机组件 + 一个平板组件
+- ✅ **数组模式**: 支持多个手机组件和多个平板组件
+- ✅ **组合模式**: 支持组件配对显示（如 phone1+pad1, phone2+pad2）
+- ✅ **资源管理**: 统一的资源配置和事件系统
+- ✅ **响应式设计**: 自适应不同屏幕尺寸
 
 ## 📝 新增页面流程
 
 ### 方法一：手动配置（推荐）
 
-1. **在 `src/config/pages.json` 中添加页面配置**：
+#### 1. 单组件模式（传统模式）
+
+在 `src/config/pages.json` 中添加页面配置：
 
 ```json
 {
@@ -43,11 +55,63 @@
 }
 ```
 
-2. **创建对应的组件文件**：
-   - `src/components/study/NewPage/new-page-phone.vue`
-   - `src/components/study/NewPage/new-page-pad.vue`
+#### 2. 数组模式（多组件独立显示）
 
-3. **重启开发服务器**（路由会自动生成）
+```json
+{
+  "id": "multiPage",
+  "title": "多组件页面",
+  "path": "/multi-page",
+  "image": "图片URL或本地路径",
+  "category": "study",
+  "components": {
+    "phone": [
+      "study/MultiPage/phone1",
+      "study/MultiPage/phone2",
+      "study/MultiPage/phone3"
+    ],
+    "pad": [
+      "study/MultiPage/pad1",
+      "study/MultiPage/pad2",
+      "study/MultiPage/pad3"
+    ]
+  },
+  "resources": []
+}
+```
+
+#### 3. 组合模式（组件配对显示）⭐ 推荐
+
+```json
+{
+  "id": "groupPage",
+  "title": "组合页面",
+  "path": "/group-page",
+  "image": "图片URL或本地路径",
+  "category": "study",
+  "groups": [
+    {
+      "phone": "study/GroupPage/box-phone1",
+      "pad": "study/GroupPage/pad1"
+    },
+    {
+      "phone": "study/GroupPage/box-phone2",
+      "pad": "study/GroupPage/pad2"
+    }
+  ],
+  "resources": []
+}
+```
+
+#### 4. 创建对应的组件文件
+
+根据配置创建相应的 Vue 组件文件：
+- `src/components/study/NewPage/new-page-phone.vue`
+- `src/components/study/NewPage/new-page-pad.vue`
+
+#### 5. 重启开发服务器
+
+路由会自动生成，无需手动配置路由文件。
 
 ### 方法二：使用生成工具
 
@@ -194,144 +258,231 @@ const handleTitleUpdate = (newTitle) => {
 - **图片资源**: `updateImage{resourceId}` (如: `updateImage1`)
 - **自定义事件**: 使用配置中的 `eventName` 字段
 
-## 📁 项目结构
+## 🔄 配置模式详解
 
-```
-src/
-├── config/
-│   └── pages.json              # 页面配置文件
-├── components/
-│   ├── DynamicPage.vue         # 动态页面组件
-│   ├── ResourceRenderer.vue    # 资源渲染组件
-│   ├── square/                 # 广场页组件
-│   ├── study/                  # 学习页组件
-│   └── mine/                   # 我的页组件
-├── utils/
-│   └── pageGenerator.js        # 页面生成工具
-├── pages/
-│   └── menu.vue               # 菜单页（已更新为配置驱动）
-└── router/
-    └── router.ts              # 路由配置（已更新为动态生成）
-```
+### 1. 单组件模式
 
-## 🔄 迁移现有页面
+**适用场景**: 传统的单页面展示，一个手机组件配一个平板组件
 
-### 1. 分析现有页面
+**配置特点**:
+- `components.phone` 和 `components.pad` 为字符串
+- 向后兼容，现有配置无需修改
+- 简单直观，适合大多数场景
 
-查看现有页面的结构，识别：
-- 页面路径和标题
-- 使用的组件
-- 资源配置（上传组件、选择器等）
+### 2. 数组模式
 
-### 2. 添加到配置文件
+**适用场景**: 需要展示多个相同类型的组件，但不需要配对
 
-将页面信息添加到 `pages.json` 中
+**配置特点**:
+- `components.phone` 和 `components.pad` 为字符串数组
+- 手机和平板组件独立显示
+- 数量可以不一致
 
-### 3. 测试验证
+**示例场景**: 展示多个不同版本的设计稿
 
-确保页面在新系统中正常工作
+### 3. 组合模式 ⭐
 
-### 4. 清理旧代码
+**适用场景**: 需要展示多组配对的组件，如年课续费的两套方案
 
-移除路由文件中的手动配置
+**配置特点**:
+- 使用 `groups` 数组配置
+- 每个组包含配对的 `phone` 和 `pad` 组件
+- 组件按组显示，保持配对关系
 
-## 🎯 最佳实践
+**示例场景**: 
+- 年课续费：`box-phone1` + `pad1`，`box-phone2` + `pad2`
+- A/B测试：方案A + 方案B 对比展示
+- 主题切换：深色主题 + 浅色主题
 
-### 1. 命名规范
+### 4. 混合模式
 
-- **页面ID**: 使用驼峰命名，如 `homeActivityCard`
-- **组件路径**: 使用分类/页面/类型的结构，如 `study/HomeActivityCard/box-phone`
-- **资源ID**: 使用数字，从1开始递增
-
-### 2. 组件组织
-
-```
-components/
-├── 分类名/
-│   ├── 页面名/
-│   │   ├── 页面名-phone.vue
-│   │   ├── 页面名-pad.vue
-│   │   └── 子组件/
-```
-
-### 3. 资源配置
-
-- 为每个资源提供清晰的名称和帮助链接
-- 使用合适的尺寸限制
-- 为交互元素提供 `eventName`
-
-### 4. 图片资源
-
-- 优先使用CDN链接
-- 本地图片使用 `@/assets/` 路径
-- 在菜单配置中正确处理本地图片导入
-
-## 🐛 常见问题
-
-### Q: 新增页面后看不到？
-A: 确保重启了开发服务器，路由是在启动时生成的。
-
-### Q: 组件加载失败？
-A: 检查组件路径是否正确，确保文件存在。
-
-### Q: 资源事件不响应？
-A: 确保在组件中正确监听了事件，事件名称要与配置中的一致。
-
-### Q: 本地图片不显示？
-A: 检查菜单页面中的图片路径映射是否正确。
-
-## 🔮 未来扩展
-
-### 1. 页面模板
-
-可以创建页面模板，快速生成相似页面：
+**高级用法**: 可以同时使用 `components` 和 `groups`
 
 ```json
 {
-  "templates": {
-    "studyPage": {
-      "components": {
-        "phone": "study/template/phone",
-        "pad": "study/template/pad"
-      },
-      "defaultResources": [...]
-    }
-  }
-}
-```
-
-### 2. 条件渲染
-
-支持根据条件显示不同的资源：
-
-```json
-{
-  "resources": [
+  "id": "hybridPage",
+  "title": "混合模式页面",
+  "path": "/hybrid-page",
+  "components": {
+    "phone": "common/base-phone",
+    "pad": "common/base-pad"
+  },
+  "groups": [
     {
-      "name": "主题色",
-      "type": "color",
-      "condition": {
-        "field": "theme",
-        "value": "custom"
-      }
+      "phone": "special/variant1-phone",
+      "pad": "special/variant1-pad"
+    },
+    {
+      "phone": "special/variant2-phone",
+      "pad": "special/variant2-pad"
     }
   ]
 }
 ```
 
-### 3. 批量操作
+## 🎯 最佳实践
 
-支持批量创建、更新和删除页面的工具。
+### 1. 组件命名规范
 
----
+```
+推荐命名格式：
+- 手机组件：{功能}-phone{序号}.vue
+- 平板组件：{功能}-pad{序号}.vue
+
+示例：
+- box-phone1.vue, box-phone2.vue
+- pad1.vue, pad2.vue
+- login-phone.vue, login-pad.vue
+```
+
+### 2. 目录结构建议
+
+```
+src/components/study/
+├── niankexuefei/           # 年课续费功能
+│   ├── box-phone1.vue     # 方案1手机版
+│   ├── box-phone2.vue     # 方案2手机版
+│   ├── pad1.vue           # 方案1平板版
+│   └── pad2.vue           # 方案2平板版
+├── taskcard/              # 任务卡片功能
+│   ├── task-phone.vue
+│   └── task-pad.vue
+└── ...
+```
+
+### 3. 配置选择指南
+
+| 场景 | 推荐模式 | 原因 |
+|------|----------|------|
+| 单一页面展示 | 单组件模式 | 简单直观，配置最少 |
+| 多版本对比 | 组合模式 | 保持配对关系，便于对比 |
+| 独立多组件 | 数组模式 | 组件间无关联，独立展示 |
+| 复杂场景 | 混合模式 | 灵活性最高，满足复杂需求 |
+
+### 4. 性能优化建议
+
+- **组件懒加载**: 大型组件建议使用动态导入
+- **资源优化**: 图片资源使用适当的尺寸和格式
+- **缓存策略**: 合理使用浏览器缓存
+
+### 5. 调试技巧
+
+```javascript
+// 在组件中添加调试信息
+console.log('组件加载:', '组件名称')
+
+// 监听事件调试
+emitter.on('*', (type, data) => {
+  console.log('事件触发:', type, data)
+})
+```
+
+## ❓ 常见问题解答
+
+### Q1: 如何在现有单组件页面中添加多组件支持？
+
+**A**: 有两种方式：
+
+1. **保持兼容**（推荐）：现有配置无需修改，系统自动兼容
+2. **升级配置**：将现有配置改为组合模式
+
+```json
+// 原配置（继续有效）
+"components": {
+  "phone": "study/page/phone",
+  "pad": "study/page/pad"
+}
+
+// 升级为组合模式
+"groups": [
+  {
+    "phone": "study/page/phone",
+    "pad": "study/page/pad"
+  }
+]
+```
+
+### Q2: 组件路径如何映射到实际文件？
+
+**A**: 路径映射规则：
+- 配置路径：`"study/niankexuefei/box-phone1"`
+- 实际文件：`src/components/study/niankexuefei/box-phone1.vue`
+- 导入路径：`@/components/study/niankexuefei/box-phone1`
+
+### Q3: 如何处理组件加载失败？
+
+**A**: 系统会自动处理组件加载失败的情况：
+- 显示错误提示信息
+- 不影响其他组件的正常显示
+- 在控制台输出详细错误信息
+
+### Q4: 资源配置如何与多组件配合使用？
+
+**A**: 资源配置对所有组件生效：
+- 事件会广播到所有组件
+- 每个组件可以选择性监听需要的事件
+- 建议使用明确的事件名称避免冲突
+
+### Q5: 如何实现组件间的数据共享？
+
+**A**: 推荐使用以下方式：
+
+```javascript
+// 1. 使用事件总线
+import emitter from '@/utils/emitter'
+
+// 发送数据
+emitter.emit('shareData', { key: 'value' })
+
+// 接收数据
+emitter.on('shareData', (data) => {
+  console.log('接收到数据:', data)
+})
+
+// 2. 使用 Pinia 状态管理
+import { useResourceStore } from '@/stores/Resources'
+const store = useResourceStore()
+```
+
+## 🔄 版本更新说明
+
+### v2.1.0 (最新)
+- ✅ 新增组合模式支持
+- ✅ 支持多组件配对显示
+- ✅ 完全向后兼容
+- ✅ 优化组件加载性能
+- ✅ 增强错误处理机制
+
+### v2.0.0
+- ✅ 基于 Vue 3 + Vite 重构
+- ✅ 配置驱动页面生成系统
+- ✅ 支持数组模式多组件
+- ✅ 集成 Arco Design 组件库
+- ✅ 自动化部署功能
+
+## 📚 相关文档
+
+- [开发文档](./开发文档.md) - 详细的技术架构和开发指南
+- [项目笔记](./项目笔记/) - 开发过程中的技术笔记
+- [自动部署文档](./项目笔记/自动部署.md) - 部署配置和使用说明
+
+## 🤝 贡献指南
+
+1. **提交问题**: 在项目中遇到问题时，请详细描述问题场景
+2. **功能建议**: 欢迎提出新功能建议和改进意见
+3. **代码贡献**: 遵循项目的代码规范和提交规范
 
 ## 📞 技术支持
 
-如果在使用过程中遇到问题，请：
+如果在使用过程中遇到问题，可以通过以下方式获取帮助：
 
-1. 查看控制台错误信息
-2. 检查配置文件格式是否正确
-3. 确认组件文件路径是否存在
-4. 参考现有页面的配置示例
+1. 查看本文档的常见问题解答
+2. 查看浏览器控制台的错误信息
+3. 检查组件文件路径是否正确
+4. 验证配置文件的JSON格式是否正确
 
-配置驱动的页面生成系统让页面管理变得更加简单和规范，享受高效的开发体验！ 🎉
+---
+
+**最后更新**: 2024年12月
+**文档版本**: v2.1.0
+
