--- a/文档/使用指南.md
+++ b/文档/使用指南.md
@@ -1,35 +1,103 @@
-# UIWeb Vue 2.0 配置驱动页面生成系统 - 使用指南
+# app 广告图效果预览工具
 
-## 🚀 快速开始
+# 系统简介
 
-### 1. 系统概述
+app 广告图效果预览工具专为设计师打造，可实时预览广告图在移动应用中的实际显示效果，帮助团队快速验证设计方案。
 
-配置驱动的页面生成系统已经成功部署到项目中，现在你可以通过简单的配置文件来管理所有页面，而不需要手动修改路由和菜单文件。系统支持单组件模式、数组模式和组合模式，可以灵活地展示一个或多个手机/平板组件。
+作为基于 Vue 3.0 的现代化 UI 组件框架，它提供统一的组件管理与资源配置机制，支持单组件、数组及组合等多种展示模式，助力开发者高效构建响应式界面。系统采用事件驱动架构实现组件通信，并通过可视化资源管理简化媒体文件的上传与应用流程。
 
-### 2. 核心文件
+# 📝 新增页面流程
 
-- **配置文件**: `src/config/pages.json` - 所有页面的配置信息
-- **动态页面组件**: `src/components/DynamicPage.vue` - 根据配置渲染页面
-- **资源渲染器**: `src/components/ResourceRenderer.vue` - 动态渲染不同类型的资源控件
-- **页面生成工具**: `src/utils/pageGenerator.js` - 辅助工具函数
-- **设备容器**: `src/components/common/DeviceContainer.vue` - 设备展示容器
-- **事件总线**: `src/utils/emitter.ts` - 组件间通信
+## 一、开发预览组件
 
-### 3. 系统特性
+创建相应的 Vue 组件文件，用于展示广告图在实际界面中的效果：
 
-- ✅ **单组件模式**: 传统的一个手机组件 + 一个平板组件
-- ✅ **数组模式**: 支持多个手机组件和多个平板组件
-- ✅ **组合模式**: 支持组件配对显示（如 phone1+pad1, phone2+pad2）
-- ✅ **资源管理**: 统一的资源配置和事件系统
-- ✅ **响应式设计**: 自适应不同屏幕尺寸
+- `src/pages/NewPage/new-page-phone.vue`
+- `src/pages/NewPage/new-page-pad.vue`
 
-## 📝 新增页面流程
+### 组件模板
 
-### 方法一：手动配置（推荐）
+```vue
+<template>
+  <div class="component-container">
+    <!-- 页面内容 -->
+    <h1>{{ title }}</h1>
+    <img v-if="backgroundImage" :src="backgroundImage" alt="背景图" />
+  </div>
+</template>
 
-#### 1. 单组件模式（传统模式）
+<script setup>
+import { ref, onMounted } from "vue";
+import emitter from "@/utils/emitter";
 
-在 `src/config/pages.json` 中添加页面配置：
+// 响应式数据
+const title = ref("默认标题");
+const backgroundImage = ref("");
+
+/**
+ * 组件挂载时的初始化
+ */
+onMounted(() => {
+  // 监听资源更新事件
+  emitter.on("updateImage1", handleBackgroundUpdate);
+  emitter.on("updateTitle", handleTitleUpdate);
+});
+
+/**
+ * 处理背景图更新
+ * @param {string} imageUrl - 图片URL
+ */
+const handleBackgroundUpdate = (imageUrl) => {
+  backgroundImage.value = imageUrl;
+};
+
+/**
+ * 处理标题更新
+ * @param {string} newTitle - 新标题
+ */
+const handleTitleUpdate = (newTitle) => {
+  title.value = newTitle;
+};
+</script>
+
+<style scoped>
+.component-container {
+  width: 100%;
+  height: 100%;
+  /* 你的样式 */
+}
+</style>
+```
+
+### 事件系统
+
+系统使用事件总线来处理资源变化：
+
+- **优先级规则**:
+  1. 优先使用配置中的 `eventName` 字段定义的事件名（如有）
+  2. 如果没有定义 `eventName`，对于图片上传类型，则使用 `updateImage{resourceId}` 格式的事件名
+- **事件触发时机**:
+  - 资源更新时自动触发对应事件
+  - 事件参数为资源的值（图片 URL、颜色值、选项值或文本）
+- **事件监听示例**:
+  - `emitter.on("updateImage1", handleImageUpdate);` - 监听图片更新
+  - `emitter.on("updateTitle", handleTitleChange);` - 监听自定义事件变化
+
+## 二、添加页面配置
+
+### 预览区配置
+
+在 `src/config/pages.json` 中添加页面配置，配置方式有三种：单组件模式、数组模式、组合模式，根据实际情况选用。
+
+#### 1. 单组件模式
+
+**适用场景**: 传统的单页面展示，一个手机组件配一个平板组件
+
+**配置特点**:
+
+- `components.phone` 和 `components.pad` 为字符串
+- 向后兼容，现有配置无需修改
+- 简单直观，适合大多数场景
 
 ```json
 {
@@ -57,6 +125,16 @@
 
 #### 2. 数组模式（多组件独立显示）
 
+**适用场景**: 需要展示多个相同类型的组件，但不需要配对
+
+**配置特点**:
+
+- `components.phone` 和 `components.pad` 为字符串数组
+- 手机和平板组件独立显示
+- 数量可以不一致
+
+**示例场景**: 展示多个不同版本的设计稿
+
 ```json
 {
   "id": "multiPage",
@@ -80,7 +158,23 @@
 }
 ```
 
-#### 3. 组合模式（组件配对显示）⭐ 推荐
+#### 3. 组合模式（组件配对显示）
+
+**适用场景**: 需要展示多组配对的组件，如年课续费的两套方案
+
+**配置特点**:
+
+- 使用 `components.groups` 数组配置
+- 每个组包含配对的 `phone` 和 `pad` 组件
+- 可通过 `name` 字段为每组添加标题（可选）
+- 组件按组显示，保持配对关系
+- 组标题会显示在组件上方，可用于区分不同方案
+
+**示例场景**:
+
+- 年课续费：`box-phone1` + `pad1`，`box-phone2` + `pad2`
+- A/B 测试：方案 A + 方案 B 对比展示
+- 主题切换：深色主题 + 浅色主题
 
 ```json
 {
@@ -89,400 +183,215 @@
   "path": "/group-page",
   "image": "图片URL或本地路径",
   "category": "study",
-  "groups": [
-    {
-      "phone": "study/GroupPage/box-phone1",
-      "pad": "study/GroupPage/pad1"
-    },
-    {
-      "phone": "study/GroupPage/box-phone2",
-      "pad": "study/GroupPage/pad2"
-    }
-  ],
+  "components": {
+    "groups": [
+      {
+        "name": "组名称",
+        "phone": "study/GroupPage/box-phone1",
+        "pad": "study/GroupPage/pad1"
+      },
+      {
+        "name": "组名称2",
+        "phone": "study/GroupPage/box-phone2",
+        "pad": "study/GroupPage/pad2"
+      }
+    ]
+  },
   "resources": []
 }
 ```
 
-#### 4. 创建对应的组件文件
+#### 注意事项
 
-根据配置创建相应的 Vue 组件文件：
-- `src/components/study/NewPage/new-page-phone.vue`
-- `src/components/study/NewPage/new-page-pad.vue`
+**重要**:
 
-#### 5. 重启开发服务器
+- 系统设计上，只会使用一种展示模式（单组件、数组或组合模式）
+- 如果同时定义了多种模式，优先级为: 组合模式 > 单组件/数组模式
+- 即如果配置了 `components.groups`，则 `components.phone` 和 `components.pad` 将被忽略
+- 确保正确设置路径和组件映射，否则组件将无法加载
+- 修改配置后需要重新启动开发服务器
 
-路由会自动生成，无需手动配置路由文件。
+### 资源类型配置
 
-### 方法二：使用生成工具
+在"resources": [ ]中配置资源类型
 
-```javascript
-import { createNewPage, resourceTemplates } from '@/utils/pageGenerator'
+#### 图片上传
 
-// 创建新页面
-createNewPage({
-  id: 'newPage',
-  title: '新页面',
-  category: 'study',
-  image: 'https://example.com/image.png',
-  resources: [
-    resourceTemplates.imageUpload(1, '背景图', 375, 200, 'https://help.link'),
-    resourceTemplates.textInput(2, '标题', '请输入标题', 'updateTitle')
-  ]
-})
-```
-
-## 🎨 资源类型配置
-
-### 图片上传
 ```json
 {
-  "id": 1,
-  "name": "背景图",
-  "type": "upload",
-  "widthExact": 375,
-  "heightExact": 200,
-  "minWidth": 300,
-  "maxWidth": 500,
-  "helpLink": "帮助链接"
+  "id": 1, // 资源唯一标识符，必填
+  "name": "背景图", // 资源名称，显示在控制面板中
+  "type": "upload", // 资源类型：上传图片
+  "widthExact": 375, // 图片必须为精确宽度（像素）
+  "heightExact": 200, // 图片必须为精确高度（像素）
+  "minWidth": 300, // 最小宽度限制（像素），可选
+  "maxWidth": 500, // 最大宽度限制（像素），可选
+  "minHeight": 150, // 最小高度限制（像素），可选
+  "maxHeight": 250, // 最大高度限制（像素），可选
+  "eventName": "updateBgImage", // 自定义事件名称，可选
+  "helpLink": "帮助链接" // 帮助文档链接，可选
 }
 ```
 
-### 图片卡片上传
+**尺寸约束规则**:
+
+- `widthExact`/`heightExact`: 要求图片必须是精确尺寸
+- `minWidth`/`maxWidth`/`minHeight`/`maxHeight`: 提供尺寸范围约束
+- 可以只约束宽度或高度，也可以同时约束
+
+#### 图片卡片上传
+
 ```json
 {
-  "id": 2,
-  "name": "轮播图",
-  "type": "upload-picture-card",
-  "minSize": { "width": 480, "height": 270 },
-  "helpLink": "帮助链接"
+  "id": 2, // 资源唯一标识符，必填
+  "name": "轮播图", // 资源名称，显示在控制面板中
+  "type": "upload-picture-card", // 资源类型：卡片式上传组件
+  "minSize": { "width": 480, "height": 270 }, // 最小尺寸要求
+  "eventName": "updateCardImage", // 自定义事件名称，可选
+  "helpLink": "帮助链接" // 帮助文档链接，可选
 }
 ```
 
-### 颜色选择器
+**特点**:
+
+- 卡片样式上传组件，更直观地展示图片
+- 适合上传多张轮播图或界面中主要的图片资源
+- 在控制面板中占据更大空间，布局更方便
+
+#### 颜色选择器
+
 ```json
 {
-  "id": 3,
-  "name": "主题色",
-  "type": "color",
-  "presetColors": ["#ff0000", "#00ff00", "#0000ff"],
-  "eventName": "updateThemeColor"
+  "id": 3, // 资源唯一标识符，必填
+  "name": "主题色", // 资源名称，显示在控制面板中
+  "type": "color", // 资源类型：颜色选择器
+  "presetColors": [
+    // 预设颜色选项，可选
+    "#ff0000",
+    "#00ff00",
+    "#0000ff"
+  ],
+  "eventName": "updateThemeColor" // 自定义事件名称，必填
 }
 ```
 
-### 下拉选择
+**功能说明**:
+
+- 提供颜色选择器，支持选择或输入十六进制颜色值
+- 可自定义预设颜色选项，便于快速选择常用颜色
+- 如不提供`presetColors`，将使用系统默认预设颜色
+- 颜色变化时会触发对应的事件
+
+#### 下拉选择
+
 ```json
 {
-  "id": 4,
-  "name": "配色方案",
-  "type": "select",
+  "id": 4, // 资源唯一标识符，必填
+  "name": "配色方案", // 资源名称，显示在控制面板中
+  "type": "select", // 资源类型：下拉选择框
   "options": [
+    // 必填，下拉选项列表
     { "value": "blue", "label": "蓝色" },
     { "value": "red", "label": "红色" }
   ],
-  "helpLink": "帮助链接",
-  "eventName": "updateColorScheme"
+  "width": "110px", // 下拉框宽度，可选
+  "placeholder": "请选择颜色", // 占位提示文本，可选
+  "helpLink": "帮助链接", // 帮助文档链接，可选
+  "eventName": "updateColorScheme" // 自定义事件名称，必填
 }
 ```
 
-### 文本输入
-```json
-{
-  "id": 5,
-  "name": "标题",
-  "type": "input",
-  "placeholder": "请输入标题",
-  "eventName": "updateTitle"
-}
-```
+**功能说明**:
 
-## 🔧 组件开发指南
+- 提供下拉选项供用户选择，适用于有限选项场景
+- 每个选项必须包含`value`（实际值）和`label`（显示文本）
+- 选项变化时会触发对应的事件，事件参数为所选选项的`value`值
+- 可自定义宽度和占位文本
 
-### 组件模板
-
-```vue
-<template>
-  <div class="component-container">
-    <!-- 你的组件内容 -->
-    <h1>{{ title }}</h1>
-    <img v-if="backgroundImage" :src="backgroundImage" alt="背景图" />
-  </div>
-</template>
-
-<script setup>
-import { ref, onMounted } from 'vue'
-import emitter from '@/utils/emitter'
-
-// 响应式数据
-const title = ref('默认标题')
-const backgroundImage = ref('')
-
-/**
- * 组件挂载时的初始化
- */
-onMounted(() => {
-  // 监听资源更新事件
-  emitter.on('updateImage1', handleBackgroundUpdate)
-  emitter.on('updateTitle', handleTitleUpdate)
-})
-
-/**
- * 处理背景图更新
- * @param {string} imageUrl - 图片URL
- */
-const handleBackgroundUpdate = (imageUrl) => {
-  backgroundImage.value = imageUrl
-}
-
-/**
- * 处理标题更新
- * @param {string} newTitle - 新标题
- */
-const handleTitleUpdate = (newTitle) => {
-  title.value = newTitle
-}
-</script>
-
-<style scoped>
-.component-container {
-  width: 100%;
-  height: 100%;
-  /* 你的样式 */
-}
-</style>
-```
-
-### 事件系统
-
-系统使用事件总线来处理资源变化：
-
-- **图片资源**: `updateImage{resourceId}` (如: `updateImage1`)
-- **自定义事件**: 使用配置中的 `eventName` 字段
-
-## 🔄 配置模式详解
-
-### 1. 单组件模式
-
-**适用场景**: 传统的单页面展示，一个手机组件配一个平板组件
-
-**配置特点**:
-- `components.phone` 和 `components.pad` 为字符串
-- 向后兼容，现有配置无需修改
-- 简单直观，适合大多数场景
-
-### 2. 数组模式
-
-**适用场景**: 需要展示多个相同类型的组件，但不需要配对
-
-**配置特点**:
-- `components.phone` 和 `components.pad` 为字符串数组
-- 手机和平板组件独立显示
-- 数量可以不一致
-
-**示例场景**: 展示多个不同版本的设计稿
-
-### 3. 组合模式 ⭐
-
-**适用场景**: 需要展示多组配对的组件，如年课续费的两套方案
-
-**配置特点**:
-- 使用 `groups` 数组配置
-- 每个组包含配对的 `phone` 和 `pad` 组件
-- 组件按组显示，保持配对关系
-
-**示例场景**: 
-- 年课续费：`box-phone1` + `pad1`，`box-phone2` + `pad2`
-- A/B测试：方案A + 方案B 对比展示
-- 主题切换：深色主题 + 浅色主题
-
-### 4. 混合模式
-
-**高级用法**: 可以同时使用 `components` 和 `groups`
+#### 文本输入
 
 ```json
 {
-  "id": "hybridPage",
-  "title": "混合模式页面",
-  "path": "/hybrid-page",
-  "components": {
-    "phone": "common/base-phone",
-    "pad": "common/base-pad"
-  },
-  "groups": [
-    {
-      "phone": "special/variant1-phone",
-      "pad": "special/variant1-pad"
-    },
-    {
-      "phone": "special/variant2-phone",
-      "pad": "special/variant2-pad"
-    }
-  ]
+  "id": 5, // 资源唯一标识符，必填
+  "name": "标题", // 资源名称，显示在控制面板中
+  "type": "input", // 资源类型：文本输入框
+  "placeholder": "请输入标题", // 占位提示文本，可选
+  "eventName": "updateTitle" // 自定义事件名称，必填
 }
 ```
 
-## 🎯 最佳实践
+**功能说明**:
 
-### 1. 组件命名规范
+- 提供文本输入框，适用于需要用户输入文字的场景
+- 输入内容变化时会触发对应的事件，事件参数为输入的文本值
+- 具有清空按钮，方便用户快速清除输入内容
 
-```
-推荐命名格式：
-- 手机组件：{功能}-phone{序号}.vue
-- 平板组件：{功能}-pad{序号}.vue
-
-示例：
-- box-phone1.vue, box-phone2.vue
-- pad1.vue, pad2.vue
-- login-phone.vue, login-pad.vue
-```
-
-### 2. 目录结构建议
-
-```
-src/components/study/
-├── niankexuefei/           # 年课续费功能
-│   ├── box-phone1.vue     # 方案1手机版
-│   ├── box-phone2.vue     # 方案2手机版
-│   ├── pad1.vue           # 方案1平板版
-│   └── pad2.vue           # 方案2平板版
-├── taskcard/              # 任务卡片功能
-│   ├── task-phone.vue
-│   └── task-pad.vue
-└── ...
-```
-
-### 3. 配置选择指南
-
-| 场景 | 推荐模式 | 原因 |
-|------|----------|------|
-| 单一页面展示 | 单组件模式 | 简单直观，配置最少 |
-| 多版本对比 | 组合模式 | 保持配对关系，便于对比 |
-| 独立多组件 | 数组模式 | 组件间无关联，独立展示 |
-| 复杂场景 | 混合模式 | 灵活性最高，满足复杂需求 |
-
-### 4. 性能优化建议
-
-- **组件懒加载**: 大型组件建议使用动态导入
-- **资源优化**: 图片资源使用适当的尺寸和格式
-- **缓存策略**: 合理使用浏览器缓存
-
-### 5. 调试技巧
-
-```javascript
-// 在组件中添加调试信息
-console.log('组件加载:', '组件名称')
-
-// 监听事件调试
-emitter.on('*', (type, data) => {
-  console.log('事件触发:', type, data)
-})
-```
-
-## ❓ 常见问题解答
-
-### Q1: 如何在现有单组件页面中添加多组件支持？
-
-**A**: 有两种方式：
-
-1. **保持兼容**（推荐）：现有配置无需修改，系统自动兼容
-2. **升级配置**：将现有配置改为组合模式
+#### 动画文件
 
 ```json
-// 原配置（继续有效）
-"components": {
-  "phone": "study/page/phone",
-  "pad": "study/page/pad"
+{
+  "id": 6, // 资源唯一标识符，必填
+  "name": "动画文件", // 资源名称，显示在控制面板中
+  "type": "upload-svga", // 资源类型：SVGA动画上传
+  "accept": ".svga", // 接受的文件类型，一般为.svga
+  "minSize": { "width": 200, "height": 200 }, // 最小尺寸限制，可选
+  "helpLink": "帮助链接", // 帮助文档链接，可选
+  "eventName": "updateSvga" // 自定义事件名称，必填
 }
-
-// 升级为组合模式
-"groups": [
-  {
-    "phone": "study/page/phone",
-    "pad": "study/page/pad"
-  }
-]
 ```
 
-### Q2: 组件路径如何映射到实际文件？
+**功能说明**:
 
-**A**: 路径映射规则：
-- 配置路径：`"study/niankexuefei/box-phone1"`
-- 实际文件：`src/components/study/niankexuefei/box-phone1.vue`
-- 导入路径：`@/components/study/niankexuefei/box-phone1`
+- 专门用于上传 SVGA 格式的动画文件
+- SVGA 是一种轻量级的动画格式，常用于移动应用中的动效展示
+- 上传成功后会触发对应的事件，事件参数为动画文件的 URL
+- 组件会自动预览上传的动画效果
 
-### Q3: 如何处理组件加载失败？
+## 三、添加组件映射
 
-**A**: 系统会自动处理组件加载失败的情况：
-- 显示错误提示信息
-- 不影响其他组件的正常显示
-- 在控制台输出详细错误信息
+在`src/components/DynamicPage.vue`文件的`createComponentMap`函数中添加新组件的路径映射。**这一步非常重要**，否则系统将无法找到并加载您的组件。
 
-### Q4: 资源配置如何与多组件配合使用？
+```js
+const createComponentMap = () => {
+  // 硬编码的组件映射，确保Vite能够正确处理
+  const componentMap = {
+    "square/square-phone": () => import("@/pages/square/square-phone.vue"),
+    "square/square-pad": () => import("@/pages/square/square-pad.vue"),
+    // 活动卡片
+    "study/HomeActivityCard/ActivityCardPhone": () =>
+      import("@/pages/APP_learning/old/ActivityCard/ActivityCardPhone.vue"),
+    "study/HomeActivityCard/ActivityCardPad": () =>
+      import("@/pages/APP_learning/old/ActivityCard/ActivityCardPad.vue"),
+    "study/TaskCard/study-phone": () =>
+      import("@/components/study/TaskCard/study-phone.vue"),
+    "study/TaskCard/study-pad": () =>
+      import("@/components/study/TaskCard/study-pad.vue"),
+    "study/Kuoke/kuoke-phone": () =>
+      import("@/components/study/Kuoke/kuoke-phone.vue"),
+    "study/Kuoke/kuoke-pad": () =>
+      import("@/components/study/Kuoke/kuoke-pad.vue"),
+    //我的页
+    "mine/mine-phone": () => import("@/components/mine/mine-phone.vue"),
+    "mine/mine-pad": () => import("@/components/mine/mine-pad.vue"),
+    // 底部广告弹窗
+    "bottom-pop-up/phone-screen": () =>
+      import("@/components/bottom-pop-up/phone-screen.vue"),
+    "bottom-pop-up/pad-screen": () =>
+      import("@/components/bottom-pop-up/pad-screen.vue"),
+    // 通用弹窗
+    "pop-up/pop-up-phone": () => import("@/components/pop-up/pop-up-phone.vue"),
+    "pop-up/pop-up-pad": () => import("@/components/pop-up/pop-up-pad.vue"),
+    // 年课续费组件 - 修正路径大小写和目录结构
+    "study/niankexuefei/Box-phone1": () =>
+      import("@/components/study/niankexuefei/box-phone1.vue"),
+    "study/niankexuefei/pad1": () =>
+      import("@/components/study/niankexuefei/pad1.vue"),
+    "study/niankexuefei/box-phone2": () =>
+      import("@/components/study/niankexuefei/box-phone2.vue"),
+    "study/niankexuefei/pad2": () =>
+      import("@/components/study/niankexuefei/pad2.vue"),
+  };
 
-**A**: 资源配置对所有组件生效：
-- 事件会广播到所有组件
-- 每个组件可以选择性监听需要的事件
-- 建议使用明确的事件名称避免冲突
-
-### Q5: 如何实现组件间的数据共享？
-
-**A**: 推荐使用以下方式：
-
-```javascript
-// 1. 使用事件总线
-import emitter from '@/utils/emitter'
-
-// 发送数据
-emitter.emit('shareData', { key: 'value' })
-
-// 接收数据
-emitter.on('shareData', (data) => {
-  console.log('接收到数据:', data)
-})
-
-// 2. 使用 Pinia 状态管理
-import { useResourceStore } from '@/stores/Resources'
-const store = useResourceStore()
+  return componentMap;
+};
 ```
-
-## 🔄 版本更新说明
-
-### v2.1.0 (最新)
-- ✅ 新增组合模式支持
-- ✅ 支持多组件配对显示
-- ✅ 完全向后兼容
-- ✅ 优化组件加载性能
-- ✅ 增强错误处理机制
-
-### v2.0.0
-- ✅ 基于 Vue 3 + Vite 重构
-- ✅ 配置驱动页面生成系统
-- ✅ 支持数组模式多组件
-- ✅ 集成 Arco Design 组件库
-- ✅ 自动化部署功能
-
-## 📚 相关文档
-
-- [开发文档](./开发文档.md) - 详细的技术架构和开发指南
-- [项目笔记](./项目笔记/) - 开发过程中的技术笔记
-- [自动部署文档](./项目笔记/自动部署.md) - 部署配置和使用说明
-
-## 🤝 贡献指南
-
-1. **提交问题**: 在项目中遇到问题时，请详细描述问题场景
-2. **功能建议**: 欢迎提出新功能建议和改进意见
-3. **代码贡献**: 遵循项目的代码规范和提交规范
-
-## 📞 技术支持
-
-如果在使用过程中遇到问题，可以通过以下方式获取帮助：
-
-1. 查看本文档的常见问题解答
-2. 查看浏览器控制台的错误信息
-3. 检查组件文件路径是否正确
-4. 验证配置文件的JSON格式是否正确
-
----
-
-**最后更新**: 2024年12月
-**文档版本**: v2.1.0
-
