fix(deploy): 更新部署配置和文档
- 修改 deploy.js 中的密码
- 添加 ssh2 依赖以支持 SFTP 功能
- 更新部署文档中的权限设置说明
- 新增 AGENTS.md 文件作为代理工作指南

--- a/文档/项目笔记/自动部署.md
+++ b/文档/项目笔记/自动部署.md
@@ -65,10 +65,27 @@ npm run deploy
 1. 权限问题
 
    - 确保服务器用户对目标目录有写入权限
-   - 可以通过以下命令修改目录权限：
+   - 如果目录属于其他用户（如 www），可以将部署用户添加到该组：
 
    ```bash
-   chmod -R 755 /path/to/your/remote/directory
+   # 将用户添加到组
+   sudo usermod -a -G www qihao
+
+   # 设置目录组权限为可写
+   sudo chmod -R g+w /www/wwwroot/
+
+   # 设置 SGID 位，确保新创建的文件继承组权限
+   sudo chmod -R g+s /www/wwwroot/
+   ```
+
+   - 验证权限设置：
+
+   ```bash
+   # 检查目录权限
+   ls -la /www/wwwroot/
+
+   # 检查用户所属组
+   groups qihao
    ```
 
 2. 连接失败
